--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven {url "https://maven.shedaniel.me"}
+	maven {url "https://maven.terraformersmc.com"}
+
 }
 
 dependencies {
@@ -26,6 +29,11 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modImplementation "com.terraformersmc:modmenu:2.0.14"
+	modApi("me.shedaniel.cloth:cloth-config-fabric:5.2.47") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 }
 
 processResources {
@@ -68,5 +76,7 @@ publishing {
 		// Notice: This block does NOT have the same function as the block in the top level.
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
+		maven {url "https://maven.shedaniel.me"}
+		maven {url "https://maven.terraformersmc.com"}
 	}
 }
